<resources>
    <string name="app_name">NMedia</string>
    <string name="Greeting">NMedia!</string>
    <string name="exampleTextPostDate">yesterday at 16:08</string>
    <string name="moreButtonDescription">Post menu</string>
    <string name="defaultCounter_0" translatable="false">0</string>
    <string name="Avatar">Avatar</string>
    <string name="likesDescription">Likes</string>
    <string name="commentDescription">Comments</string>
    <string name="shareDescription">Share</string>
    <string name="viewDescription">Views</string>
    <string name="unavailable">unavailable</string>
    <string name="one_second">seconds ago</string>
    <string name="few_seconds">seconds ago</string>
    <string name="many_seconds">seconds ago</string>
    <string name="one_minute">minutes ago</string>
    <string name="few_minutes">minutes ago</string>
    <string name="many_minutes">minutes ago</string>
    <string name="one_hour">hours ago</string>
    <string name="few_hours">hours ago</string>
    <string name="many_hours">hours ago</string>
    <string name="one_day">days ago</string>
    <string name="few_days">days ago</string>
    <string name="many_days">days ago</string>
    <string name="one_week">weeks ago</string>
    <string name="few_weeks">weeks ago</string>
    <string name="many_weeks">weeks ago</string>
    <string name="one_month">months ago</string>
    <string name="few_months">months ago</string>
    <string name="many_months">months ago</string>
    <string name="one_year">years ago</string>
    <string name="few_years">years ago</string>
    <string name="many_years">years ago</string>
    <string name="just_now">Just now</string>
    <string name="open_additional_menu">open additional menu</string>
    <string name="edit_Post">Edit</string>
    <string name="remove_Post">Remove</string>
    <string name="post_text_field">Write post</string>
    <string name="exampleTextTitleOfPost">Netology</string>
    <string name="exampleTextOfPost">Example of post text</string>
    <string name="edit_post">Edit Post</string>
    <string name="add_a_new_post">Add a New Post</string>
    <string name="add_post">Add</string>
    <string name="content">Content</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="Name_of_video">Name of video</string>
    <string name="channel_remote_name">Notifications from the server</string>
    <string name="channel_remote_description">Notifications from a remote server</string>
    <string name="notification_user_liked">%1$s liked the post %2$s</string>
    <string name="unknown_action">Unknown action: %1$s</string>
    <string name="notification_new_post">%1$s published a new post:</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="posts_is_not_found">Posts is not found</string>
</resources>