<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/moreButton"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/moreButtonDescription"
            android:src="@drawable/ic_more_dote_24"
            app:layout_constraintBottom_toBottomOf="@+id/postInfoLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/postInfoLayout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/avatarCardView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="45dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="@string/Avatar"
                android:src="@mipmap/ic_launcher" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/postInfoLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/avatarCardView"
            app:layout_constraintEnd_toStartOf="@+id/moreButton"
            app:layout_constraintStart_toEndOf="@id/avatarCardView"
            app:layout_constraintTop_toTopOf="@+id/avatarCardView">

            <TextView
                android:id="@+id/postTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/exampleTextTitleOfPost"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="45dp" />

            <TextView
                android:id="@+id/dateOfPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/exampleTextPostDate"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="71dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/postContentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:maxLines="10"
            android:text="@string/exampleTextOfPost"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatarCardView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="12dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postContentTextView">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/likesDescription"
                    android:src="@drawable/ic_favorite_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultCounter_0"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/commentDescription"
                    android:src="@drawable/ic_comment_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultCounter_0"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/shareDescription"
                    android:rotationY="180"
                    android:src="@drawable/ic_share_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultCounter_0"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/viewDescription"
                    android:src="@drawable/ic_view_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultCounter_0"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>